{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 37,
  "lineage": "8dbc3c9e-2da2-1e0e-442e-2ec30a44c655",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099487dfff632027a",
            "arn": "arn:aws:ec2:us-east-1:634333927013:elastic-ip/eipalloc-099487dfff632027a",
            "association_id": "eipassoc-0ad021acf0db67957",
            "domain": "vpc",
            "id": "eipalloc-099487dfff632027a",
            "instance": "i-064b2a0f952b39a67",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d3b487a77b91afa7",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-54-159-140-85.compute-1.amazonaws.com",
            "public_ip": "54.159.140.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techcorp-bastion-eip"
            },
            "tags_all": {
              "Name": "techcorp-bastion-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bae57e2e7a59544",
            "arn": "arn:aws:ec2:us-east-1:634333927013:elastic-ip/eipalloc-09bae57e2e7a59544",
            "association_id": "eipassoc-0d2bde8566b132814",
            "domain": "vpc",
            "id": "eipalloc-09bae57e2e7a59544",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd4151d2f767da8c",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-34-192-83-14.compute-1.amazonaws.com",
            "public_ip": "34.192.83.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techcorp-eip-1"
            },
            "tags_all": {
              "Name": "techcorp-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035bc53055acbad0e",
            "arn": "arn:aws:ec2:us-east-1:634333927013:elastic-ip/eipalloc-035bc53055acbad0e",
            "association_id": "eipassoc-0a8f8e72b3a27cbcb",
            "domain": "vpc",
            "id": "eipalloc-035bc53055acbad0e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d01b1b940c2cbbc0",
            "private_dns": "ip-10-0-2-116.ec2.internal",
            "private_ip": "10.0.2.116",
            "public_dns": "ec2-34-198-173-237.compute-1.amazonaws.com",
            "public_ip": "34.198.173.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techcorp-eip-2"
            },
            "tags_all": {
              "Name": "techcorp-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:634333927013:instance/i-064b2a0f952b39a67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064b2a0f952b39a67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3b487a77b91afa7",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-44-198-164-211.compute-1.amazonaws.com",
            "public_ip": "44.198.164.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af03f2804af80917",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce2af59d805cec87",
            "tags": {
              "Name": "techcorp-bastion",
              "type": "ssh-bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion",
              "type": "ssh-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4d7e3ac81e1a7c8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:634333927013:instance/i-0fbbd2311f86d40e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbbd2311f86d40e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed875dd62b36dc8b",
            "private_dns": "ip-10-0-3-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0548ea95fe3a80941",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05996bfa5df2b4995",
            "tags": {
              "Name": "techcorp-db",
              "type": "database-server"
            },
            "tags_all": {
              "Name": "techcorp-db",
              "type": "database-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0dcde9aef8792e864"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:634333927013:instance/i-099da89869a0915b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099da89869a0915b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c7b12330f956930",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f621d98a88d2f139",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05996bfa5df2b4995",
            "tags": {
              "Name": "techcorp-web-1",
              "type": "web-server"
            },
            "tags_all": {
              "Name": "techcorp-web-1",
              "type": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-084f459289c20eb98"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:634333927013:instance/i-06b78f0868e76ffb1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b78f0868e76ffb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008af9908565ef421",
            "private_dns": "ip-10-0-4-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c4a037221a2f1dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a6aa1bb27926d0b",
            "tags": {
              "Name": "techcorp-web-2",
              "type": "web-server"
            },
            "tags_all": {
              "Name": "techcorp-web-2",
              "type": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-084f459289c20eb98"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:internet-gateway/igw-08a3cca4c8397cdfe",
            "id": "igw-08a3cca4c8397cdfe",
            "owner_id": "634333927013",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "techcorp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:loadbalancer/app/techcorp-alb/a93e7b3f3e2c991b",
            "arn_suffix": "app/techcorp-alb/a93e7b3f3e2c991b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-1626791474.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:634333927013:loadbalancer/app/techcorp-alb/a93e7b3f3e2c991b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c2fd2df1ad03f4e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a349c42dddbedee8"
              },
              {
                "subnet_id": "subnet-0ce2af59d805cec87"
              }
            ],
            "subnets": [
              "subnet-0a349c42dddbedee8",
              "subnet-0ce2af59d805cec87"
            ],
            "tags": {
              "Name": "techcorp-alb"
            },
            "tags_all": {
              "Name": "techcorp-alb"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:listener/app/techcorp-alb/a93e7b3f3e2c991b/77863d5ba4317de6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:634333927013:listener/app/techcorp-alb/a93e7b3f3e2c991b/77863d5ba4317de6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:loadbalancer/app/techcorp-alb/a93e7b3f3e2c991b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.techcorp_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48",
            "arn_suffix": "targetgroup/techcorp-web-tg/b2d65aabb373da48",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:634333927013:loadbalancer/app/techcorp-alb/a93e7b3f3e2c991b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48-20260406201916481100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48",
            "target_id": "i-099da89869a0915b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webs",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48-20260406201916572800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:634333927013:targetgroup/techcorp-web-tg/b2d65aabb373da48",
            "target_id": "i-06b78f0868e76ffb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.webs",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bae57e2e7a59544",
            "association_id": "eipassoc-0d2bde8566b132814",
            "connectivity_type": "public",
            "id": "nat-0ce011f181d5099d4",
            "network_interface_id": "eni-0bd4151d2f767da8c",
            "private_ip": "10.0.1.47",
            "public_ip": "34.192.83.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce2af59d805cec87",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035bc53055acbad0e",
            "association_id": "eipassoc-0a8f8e72b3a27cbcb",
            "connectivity_type": "public",
            "id": "nat-019803b5bf12c39d0",
            "network_interface_id": "eni-0d01b1b940c2cbbc0",
            "private_ip": "10.0.2.116",
            "public_ip": "34.198.173.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a349c42dddbedee8",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:route-table/rtb-0e9d7017905dcba6c",
            "id": "rtb-0e9d7017905dcba6c",
            "owner_id": "634333927013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce011f181d5099d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:route-table/rtb-00e0c5c2c893e5da9",
            "id": "rtb-00e0c5c2c893e5da9",
            "owner_id": "634333927013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019803b5bf12c39d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:route-table/rtb-058ca77868efd66d0",
            "id": "rtb-058ca77868efd66d0",
            "owner_id": "634333927013",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a3cca4c8397cdfe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b110d4c1f299bf11",
            "route_table_id": "rtb-0e9d7017905dcba6c",
            "subnet_id": "subnet-05996bfa5df2b4995"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f498341809ddfc6",
            "route_table_id": "rtb-00e0c5c2c893e5da9",
            "subnet_id": "subnet-04a6aa1bb27926d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fea63064cbd67e7",
            "route_table_id": "rtb-058ca77868efd66d0",
            "subnet_id": "subnet-0ce2af59d805cec87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abc92999041d0502",
            "route_table_id": "rtb-058ca77868efd66d0",
            "subnet_id": "subnet-0a349c42dddbedee8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:security-group/sg-0c2fd2df1ad03f4e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2fd2df1ad03f4e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techcorp-alb-sg",
            "name_prefix": "",
            "owner_id": "634333927013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:security-group/sg-0e4d7e3ac81e1a7c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4d7e3ac81e1a7c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.57.21/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "634333927013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:security-group/sg-0dcde9aef8792e864",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcde9aef8792e864",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084f459289c20eb98"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4d7e3ac81e1a7c8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-db-sg",
            "name_prefix": "",
            "owner_id": "634333927013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:security-group/sg-084f459289c20eb98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084f459289c20eb98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2fd2df1ad03f4e6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2fd2df1ad03f4e6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4d7e3ac81e1a7c8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "634333927013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Servers"
            },
            "tags_all": {
              "Name": "Web Servers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:subnet/subnet-05996bfa5df2b4995",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05996bfa5df2b4995",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634333927013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:subnet/subnet-04a6aa1bb27926d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a6aa1bb27926d0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634333927013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:subnet/subnet-0ce2af59d805cec87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce2af59d805cec87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634333927013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:subnet/subnet-0a349c42dddbedee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a349c42dddbedee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634333927013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-0adc9ac370b6c5c48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techcorp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:634333927013:vpc/vpc-0adc9ac370b6c5c48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e58edebc544ecdc",
            "default_route_table_id": "rtb-03915c5ade6271d70",
            "default_security_group_id": "sg-0130528b4c4a79be4",
            "dhcp_options_id": "dopt-090d60cb2f43a02eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adc9ac370b6c5c48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03915c5ade6271d70",
            "owner_id": "634333927013",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}